versioned_docs/version-1.0/toolhive/guides-k8s/intro.mdx
---
title: Overview
description: How to manage MCP servers in Kubernetes with the ToolHive operator
---

The ToolHive Kubernetes operator manages MCP servers in Kubernetes clusters. It
lets you define MCP servers as Kubernetes resources and automates their
deployment and management.

:::info

See the [ToolHive Operator quickstart tutorial](./quickstart.mdx) to get started
quickly using a local kind cluster. We'd love for you to try it out and send
feedback!

:::

## Overview

The operator introduces new Custom Resource Definitions (CRDs) into your
Kubernetes cluster. The primary CRDs for MCP server workloads are `MCPServer`,
which represents a single MCP server running in Kubernetes, `MCPRemoteProxy`,
which represents an MCP server running outside the cluster that is proxied by
ToolHive, and `VirtualMCPServer`, which represents a virtual MCP server gateway
that aggregates multiple backend MCP servers.

When you create an `MCPServer` resource, the operator automatically:

1. Creates a Deployment to run the MCP server
2. Sets up a Service to expose the MCP server
3. Configures the appropriate permissions and settings
4. Manages the lifecycle of the MCP server

```mermaid
flowchart TB
  subgraph K8s["<h3>Kubernetes cluster</h3>"]
    subgraph K8s1["**Deployment**"]
      Svc1["HTTP Proxy<br>Service"] -- http --> Proxy1["HTTP Proxy<br>Pod"] -- stdio or http --> MCP1["MCP Server<br>Pod"]
      Proxy1 -.->|creates| MCP1
    end
    subgraph K8s2["**Deployment**"]
      Svc2["HTTP Proxy<br>Service"] -- http --> Proxy2["HTTP Proxy<br>Pod"] -- stdio or http --> MCP2["MCP Server<br>Pod"]
      Proxy2 -.->|creates| MCP2
    end
    Ingress["Ingress"] -- http --> Svc1 & Svc2
    Operator["ToolHive<br>Operator"] -.->|creates| K8s1 & K8s2
  end

  Client["MCP Client<br>[ex: Copilot]"] -- http --> Ingress
```

`MCPRemoteProxy` and `VirtualMCPServer` resources work similarly, with the
operator managing a proxy pod that connects to remote MCP servers or aggregates
multiple backends, respectively.

The diagram shows how clients connect to MCP servers through a standard Ingress
or Gateway. To learn how to expose your MCP servers and connect clients, see
[Connect clients to MCP servers](./connect-clients.mdx).

## Installation

[Deploy the ToolHive operator](./deploy-operator.mdx) in your Kubernetes
cluster.

Once the operator is installed, you can create and manage MCP servers:

- [Run MCP servers in Kubernetes](./run-mcp-k8s.mdx)
- [Proxy remote MCP servers](./remote-mcp-proxy.mdx)
- [Virtual MCP Server (vMCP)](../guides-vmcp/index.mdx)
